syntax = "proto3";

option csharp_namespace = "Crib2023.Backend.Services.FileStorage.GrpcProtos";

package FileStorage;

service FileStorageTopicService {
  rpc GetItem (FileStorageTopicItemGetOperationRequest) returns (FileStorageTopicItemGetOperationReply);
  rpc GetList (FileStorageTopicListGetOperationRequest) returns (FileStorageTopicListGetOperationReply);
}

// GetItem Request

message FileStorageTopicItemGetOperationRequest {
  FileStorageTopicItemGetOperationInput input = 1;
  string operation_code = 2;
}

message FileStorageTopicItemGetOperationInput {
  string axis = 1;
  int64 id = 2;
  string name = 3;
  int64 parent_id = 4;  
}

// GetItem Reply

message FileStorageTopicItemGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  FileStorageTopicItemGetOperationOutput output = 4;
  repeated string invalid_input_properties = 5;
}

message FileStorageTopicItemGetOperationOutput {
  FileStorageTopicEntity item = 1;
}

message FileStorageTopicEntity {
  FileStorageTopicTypeEntity data = 1;
  bool tree_has_children = 2;
  int32 treeLevel = 3;
  string treePath = 4;
}

message FileStorageTopicTypeEntity {
  int64 id = 1;
  string name = 2;
  int64 parent_id = 3;
  string row_guid = 4;
}

// GetList Request

message FileStorageTopicListGetOperationRequest {
  FileStorageTopicListGetOperationInput input = 1;
  string operation_code = 2;
}

message FileStorageTopicListGetOperationInput {
  int32 page_number = 1;
  int32 page_size = 2;
  string sort_field = 3;
  string sort_direction = 4;
  string axis = 5;
  repeated int64 ids = 6;
  string name = 7;
  string tree_path = 8;
}

// GetList Reply

message FileStorageTopicListGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  FileStorageTopicListGetOperationOutput output = 4;
  repeated string invalid_input_properties = 5;
}

message FileStorageTopicListGetOperationOutput {
  repeated FileStorageTopicEntity items = 1;
  int64 total_count = 2;
}
