syntax = "proto3";

package backend_service_filestorage;

option csharp_namespace = "Crib2023.Grpc.Backend.Services.FileStorage";

import "backend_service_filestorage.proto";

service FileStorageTopicService {
  rpc GetItem (FileStorageTopicItemGetOperationRequest) returns (FileStorageTopicItemGetOperationReply);
  rpc GetList (FileStorageTopicListGetOperationRequest) returns (FileStorageTopicListGetOperationReply);
}

// GetItem Request

message FileStorageTopicItemGetOperationRequest {
  FileStorageTopicItemGetOperationInput input = 1;
  string operation_code = 2;
}

message FileStorageTopicItemGetOperationInput {
  string axis = 1;
  int64 id = 2;
  string name = 3;
  int64 parent_id = 4;  
}

// GetItem Reply

message FileStorageTopicItemGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  FileStorageTopicItemGetOperationOutput output = 4;
  repeated string invalid_input_properties = 5;
}

message FileStorageTopicItemGetOperationOutput {
  FileStorageTopicEntity item = 1;
}

message FileStorageTopicEntity {
  FileStorageTopicTypeEntity data = 1;
  repeated FileStorageOptionValueObject tree_ancestors = 2;
  bool tree_has_children = 3;
  int32 tree_level = 4;
  string tree_path = 5;  
}

message FileStorageTopicTypeEntity {
  int64 id = 1;
  string name = 2;
  int64 parent_id = 3;
  string row_guid = 4;
}

// GetList Request

message FileStorageTopicListGetOperationRequest {
  FileStorageTopicListGetOperationInput input = 1;
  string operation_code = 2;
}

message FileStorageTopicListGetOperationInput {
  int32 page_number = 1;
  int32 page_size = 2;
  string sort_field = 3;
  string sort_direction = 4;
  string axis = 5;
  repeated int64 expanded_node_ids = 6;
  int64 root_node_id = 7;
  string root_node_tree_path = 8;
  repeated int64 ids = 9;
  string name = 10;
}

// GetList Reply

message FileStorageTopicListGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  FileStorageTopicListGetOperationOutput output = 4;
  repeated string invalid_input_properties = 5;
}

message FileStorageTopicListGetOperationOutput {
  repeated FileStorageTopicEntity items = 1;
  int64 total_count = 2;
}

// GetTree Request

message FileStorageTopicTreeGetOperationRequest {
  FileStorageTopicTreeGetOperationInput input = 1;
  string operation_code = 2;
}

message FileStorageTopicTreeGetOperationInput {
  int32 page_number = 1;
  int32 page_size = 2;
  string sort_field = 3;
  string sort_direction = 4;
  string axis = 5;
  repeated int64 expanded_node_ids = 6;
  int64 root_node_id = 7;
  string root_node_tree_path = 8;
}

// GetTree Reply

message FileStorageTopicTreeGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  FileStorageTopicTreeGetOperationOutput output = 4;
  repeated FileStorageInvalidInputProperty invalid_input_properties = 5;
}

message FileStorageTopicTreeGetOperationOutput {
  repeated FileStorageTopicEntityForTree nodes = 1;
  int64 total_count = 2;
}

message FileStorageTopicEntityForTree {
  FileStorageTopicTypeEntity data = 1;
  repeated FileStorageTopicEntityForTree tree_children = 2;
  bool tree_has_children = 3;
  int32 tree_level = 4;
  string tree_path = 5;  
}
